Layout issues with other themes

--- a/src/blocks/container/editor.lazy.scss
+++ b/src/blocks/container/editor.lazy.scss
@@ -96,6 +96,11 @@
 
 	.block-editor-block-list__layout {
 
+		.wp-block {
+			margin: 0;
+			padding: 0;
+		}
+
 		.block-list-appender.wp-block {
 
 			button {
